Short property values are not saved in templates
Fixes #188: