@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015 Denis Forveille titou10.titou10@gmail.com
+ * Copyright (C) 2025 Denis Forveille titou10.titou10@gmail.com
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -21,8 +21,8 @@ import java.io.ByteArrayOutputStream;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.io.Serializable;
+import java.util.Base64;
 
-import jakarta.xml.bind.DatatypeConverter;
 import jakarta.xml.bind.annotation.adapters.XmlAdapter;
 
 import org.slf4j.Logger;
@@ -42,7 +42,7 @@ public class SerializableXmlAdapter extends XmlAdapter<String, Serializable> {
    public String marshal(Serializable o) throws Exception {
       try (ByteArrayOutputStream baos = new ByteArrayOutputStream(); ObjectOutputStream oos = new ObjectOutputStream(baos);) {
          oos.writeObject(o);
-         return DatatypeConverter.printBase64Binary(baos.toByteArray());
+         return Base64.getEncoder().encodeToString(baos.toByteArray().toString().getBytes());
       } catch (Exception e) {
          log.error("Exception when marshalling object to JTBMessageTemplate", e);
          throw e;
@@ -54,7 +54,7 @@ public class SerializableXmlAdapter extends XmlAdapter<String, Serializable> {
       // FIXME: DF will ALWAYS fail because the implementation class, if defined, is in a classloder of a QM bundle...
       // Don't have a solution for this now...
       // Q: how to create an instance of "Serialization" without the implementaiton class on the classpath?
-      byte[] data = DatatypeConverter.parseBase64Binary(xmlText);
+      byte[] data = Base64.getDecoder().decode(xmlText);
       try (ObjectInputStream ois = new ObjectInputStream(new ByteArrayInputStream(data));) {
          Object o = ois.readObject();
          return (Serializable) o;
